# apitofsim

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .clangd  .gitignore  404.html  README.md  clangdebug.ini  index.html  meson.build  meson_options.txt  mkdocs.yml  objects.inv  pyproject.toml  run.sh  sitemap.xml
.github/workflows/: conda.yml  docs.yml  test.yml  wheels.yml
api/: index.html
bench/: compute_k_total.cpp  density_of_states.cpp  meson.build
bench/old/: bench.py  plot.py  run-kale.slurm  run-puhti.slurm  run-ukko.slurm  slurm-common-uh-hpc.sh  slurm-setup.sh
ci/: setup_linux.sh
conda.recipe/: recipe.yaml  variants.yaml
docs/: api.md  index.md  notebooks.md
examples/notebooks/: rejection-sampler-design.py
examples/python-workflow/: README.md  prepare.py  run.py
meson/: clangdebug.ini  clangprofile.ini  clangrelease.ini  clangwheel.ini  icxprofile.ini  windowswheel.ini
meson/dev/: clangdebug.ini  clangnsan.ini  clangsan.ini  clangsingle.ini  clangslow.ini  icxprofile.ini
meson/pkg/: clangwheel.ini  unixconda.ini  windowsconda.ini  windowswheel.ini
meson/test/: manysan.ini  memsan.ini  valgrind.ini
notebooks/: index.html
python/: apitofsim.cpp  apitofsim.py  cli.py  meson.build
python/apitofsim/: __init__.py  api.py  cli.py  config.py  db.py
search/: search_index.json
src/: apitof_pinhole.cpp  apitof_pinhole_io.h  apitof_pinhole_lib.h  consts.h  densityandrate_lib.h  densityandrate_win.cpp  meson.build  omp_shim.h  samplers.h  skimmer_lib.h  skimmer_win.cpp  utils.h  warnlogcount.h
test/: densityandrate_smoke.h  main.cpp  meson.build
test/bench/: compute_k_total.cpp  density_of_states.cpp  meson.build
test/data/: meson.build  rate_constant.out
