[project]
name = 'apitofsim'
version = '0.0.1'
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy", "pandas", "pint>=0.25.1"]

[build-system]
build-backend = 'mesonpy'
requires = ["meson-python", "meson >= 1.3.0"]

[dependency-groups]
dev = ["meson-python>=0.18.0", "pip>=25.2", "basedpyright"]

[tool.meson-python.args]
install = ['--skip-subprojects']
setup = ['-Dpython=enabled']

[tool.cibuildwheel]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"

[tool.cibuildwheel.linux]
before-build = "bash ci/setup_linux.sh"
config-settings = {setup-args="--native-file={project}/meson/pkg/clangwheel.ini"}

[tool.cibuildwheel.windows]
config-settings = {setup-args="--native-file={project}/meson/pkg/windowswheel.ini"}

[tool.pyright]
reportConstantRedefinition = false
