[project]
name = 'apitofsim'
version = '0.0.1'
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy", "pandas", "pint>=0.25.1"]

[build-system]
build-backend = 'mesonpy'
requires = ["meson-python", "meson >= 1.3.0"]

[dependency-groups]
dev = ["meson-python>=0.18.0", "pip>=25.2", "basedpyright"]

[tool.meson-python.args]
install = ['--skip-subprojects']
setup = ['-Dpython=enabled']

[tool.cibuildwheel]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"

[tool.cibuildwheel.linux]
before-build = "bash ci/setup_linux.sh"
config-settings = {setup-args="--native-file=../meson/pkg/clangwheel.ini"}
repair-wheel-command = [
  "auditwheel repair --disable-isa-ext-check -w {dest_dir} {wheel}",
  "pipx run abi3audit --strict --report {wheel}",
]

[tool.cibuildwheel.windows]
config-settings = {setup-args="--native-file=..\\meson\\pkg\\windowswheel.ini"}

[[tool.cibuildwheel.overrides]]
select = "*-x86_64"
inherit.environment = "append"
environment.CPPFLAGS = "-march=x86-64-v3"

[tool.pyright]
reportConstantRedefinition = false
