[project]
name = 'apitofsim'
version = '0.0.1'
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["duckdb>=1.4.2", "numpy", "pandas", "pint>=0.25.1"]

[build-system]
build-backend = 'mesonpy'
requires = ["meson-python", "meson >= 1.3.0"]

[dependency-groups]
dev = ["meson-python>=0.18.0", "pip>=25.2", "basedpyright", "ruff>=0.14.5"]
docs = [
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
]

[tool.meson-python]
limited-api = true

[tool.meson-python.args]
install = ['--skip-subprojects']
setup = ['-Dpython=enabled']

[tool.cibuildwheel]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"
build = "cp313-*"
skip = "*-manylinux_i686 cp3??t-* *-musllinux_*"
archs = ["auto64"]

[tool.cibuildwheel.linux]
before-build = "bash ci/setup_linux.sh"
config-settings = { setup-args = "--native-file=../meson/pkg/clangwheel.ini" }
repair-wheel-command = [
  "auditwheel repair --disable-isa-ext-check -w {dest_dir} {wheel}",
  "pipx run abi3audit --strict --report {wheel} --assume-minimum-abi3 3.12",
]

[tool.cibuildwheel.windows]
config-settings = { setup-args = "--native-file=..\\meson\\pkg\\windowswheel.ini" }

[[tool.cibuildwheel.overrides]]
select = "*-x86_64"
inherit.environment = "append"
environment.CXXFLAGS = "-march=x86-64-v3"

[tool.pyright]
reportConstantRedefinition = false
failOnWarnings = false

[tool.uv]
no-build-isolation-package = ["apitofsim"]

[tool.uv.sources]
apitofsim = { path = ".", editable = true }
